# lifpdf

./: Cargo.toml  README.md  build.rs
src/: config.rs  flag.rs  interface.rs  main.rs  parse.rs  pdf.rs  print.rs  table_data.rs
ui/: app.slint  mainsection.slint  settings.slint  sidebar.slint  structs.slint
