[package]
name = "lifpdf"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
notify = "8.2.0"

oxidize-pdf = "1.6.4"
slint = { version = "1.14.1", features = ["serde"] }
slint-build = "1.14.1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
slint-build = "1.14.1"
